[gd_scene load_steps=4 format=4 uid="uid://bi8ot4lmjgftm"]

[ext_resource type="Script" uid="uid://bd6x2l2mbk0q8" path="res://gameedit.gd" id="1_bcled"]
[ext_resource type="Script" uid="uid://b2uydhpu634db" path="res://addons/grid_display/grid_display.gd" id="2_40ihf"]
[ext_resource type="TileSet" uid="uid://dgy3y26glvfn2" path="res://sokoban.tres" id="2_bcled"]

[node name="gameedit" type="Node2D"]
script = ExtResource("1_bcled")

[node name="backgroud" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD5//v/AQALAAYAAAD5//z/AQALAAYAAAD5//3/AQALAAYAAAD5//7/AQALAAYAAAD5////AQALAAYAAAD5/wAAAQALAAYAAAD5/wEAAQALAAYAAAD5/wIAAQALAAYAAAD5/wMAAQALAAYAAAD5/wQAAQALAAYAAAD5/wUAAQALAAYAAAD5/wYAAQALAAYAAAD5/wcAAQALAAYAAAD5/wgAAQALAAYAAAD5/wkAAQALAAYAAAD5/woAAQALAAYAAAD5/wsAAQALAAYAAAD5/wwAAQALAAYAAAD5/w0AAQALAAYAAAD5/w4AAQALAAYAAAD5/w8AAQALAAYAAAD5/xAAAQALAAYAAAD5/xEAAQALAAYAAAD5/xIAAQALAAYAAAD5/xMAAQALAAYAAAD5/xQAAQALAAYAAAD5/xUAAQALAAYAAAD6//v/AQALAAYAAAD6//z/AQALAAYAAAD6//3/AQALAAYAAAD6//7/AQALAAYAAAD6////AQALAAYAAAD6/wAAAQALAAYAAAD6/wEAAQALAAYAAAD6/wIAAQALAAYAAAD6/wMAAQALAAYAAAD6/wQAAQALAAYAAAD6/wUAAQALAAYAAAD6/wYAAQALAAYAAAD6/wcAAQALAAYAAAD6/wgAAQALAAYAAAD6/wkAAQALAAYAAAD6/woAAQALAAYAAAD6/wsAAQALAAYAAAD6/wwAAQALAAYAAAD6/w0AAQALAAYAAAD6/w4AAQALAAYAAAD6/w8AAQALAAYAAAD6/xAAAQALAAYAAAD6/xEAAQALAAYAAAD6/xIAAQALAAYAAAD6/xMAAQALAAYAAAD6/xQAAQALAAYAAAD6/xUAAQALAAYAAAD7//v/AQALAAYAAAD7//z/AQALAAYAAAD7//3/AQALAAYAAAD7//7/AQALAAYAAAD7////AQALAAYAAAD7/wAAAQALAAYAAAD7/wEAAQALAAYAAAD7/wIAAQALAAYAAAD7/wMAAQALAAYAAAD7/wQAAQALAAYAAAD7/wUAAQALAAYAAAD7/wYAAQALAAYAAAD7/wcAAQALAAYAAAD7/wgAAQALAAYAAAD7/wkAAQALAAYAAAD7/woAAQALAAYAAAD7/wsAAQALAAYAAAD7/wwAAQALAAYAAAD7/w0AAQALAAYAAAD7/w4AAQALAAYAAAD7/w8AAQALAAYAAAD7/xAAAQALAAYAAAD7/xEAAQALAAYAAAD7/xIAAQALAAYAAAD7/xMAAQALAAYAAAD7/xQAAQALAAYAAAD7/xUAAQALAAYAAAD8//v/AQALAAYAAAD8//z/AQALAAYAAAD8//3/AQALAAYAAAD8//7/AQALAAYAAAD8////AQALAAYAAAD8/wAAAQALAAYAAAD8/wEAAQALAAYAAAD8/wIAAQALAAYAAAD8/wMAAQALAAYAAAD8/wQAAQALAAYAAAD8/wUAAQALAAYAAAD8/wYAAQALAAYAAAD8/wcAAQALAAYAAAD8/wgAAQALAAYAAAD8/wkAAQALAAYAAAD8/woAAQALAAYAAAD8/wsAAQALAAYAAAD8/wwAAQALAAYAAAD8/w0AAQALAAYAAAD8/w4AAQALAAYAAAD8/w8AAQALAAYAAAD8/xAAAQALAAYAAAD8/xEAAQALAAYAAAD8/xIAAQALAAYAAAD8/xMAAQALAAYAAAD8/xQAAQALAAYAAAD8/xUAAQALAAYAAAD9//v/AQALAAYAAAD9//z/AQALAAYAAAD9//3/AQALAAYAAAD9//7/AQALAAYAAAD9////AQALAAYAAAD9/wAAAQALAAYAAAD9/wEAAQALAAYAAAD9/wIAAQALAAYAAAD9/wMAAQALAAYAAAD9/wQAAQALAAYAAAD9/wUAAQALAAYAAAD9/wYAAQALAAYAAAD9/wcAAQALAAYAAAD9/wgAAQALAAYAAAD9/wkAAQALAAYAAAD9/woAAQALAAYAAAD9/wsAAQALAAYAAAD9/wwAAQALAAYAAAD9/w0AAQALAAYAAAD9/w4AAQALAAYAAAD9/w8AAQALAAYAAAD9/xAAAQALAAYAAAD9/xEAAQALAAYAAAD9/xIAAQALAAYAAAD9/xMAAQALAAYAAAD9/xQAAQALAAYAAAD9/xUAAQALAAYAAAD+//v/AQALAAYAAAD+//z/AQALAAYAAAD+//3/AQALAAYAAAD+//7/AQALAAYAAAD+////AQALAAYAAAD+/wAAAQALAAYAAAD+/wEAAQALAAYAAAD+/wIAAQALAAYAAAD+/wMAAQALAAYAAAD+/wQAAQALAAYAAAD+/wUAAQALAAYAAAD+/wYAAQALAAYAAAD+/wcAAQALAAYAAAD+/wgAAQALAAYAAAD+/wkAAQALAAYAAAD+/woAAQALAAYAAAD+/wsAAQALAAYAAAD+/wwAAQALAAYAAAD+/w0AAQALAAYAAAD+/w4AAQALAAYAAAD+/w8AAQALAAYAAAD+/xAAAQALAAYAAAD+/xEAAQALAAYAAAD+/xIAAQALAAYAAAD+/xMAAQALAAYAAAD+/xQAAQALAAYAAAD+/xUAAQALAAYAAAD///v/AQALAAYAAAD///z/AQALAAYAAAD///3/AQALAAYAAAD///7/AQALAAYAAAD/////AQALAAYAAAD//wAAAQALAAYAAAD//wEAAQALAAYAAAD//wIAAQALAAYAAAD//wMAAQALAAYAAAD//wQAAQALAAYAAAD//wUAAQALAAYAAAD//wYAAQALAAYAAAD//wcAAQALAAYAAAD//wgAAQALAAYAAAD//wkAAQALAAYAAAD//woAAQALAAYAAAD//wsAAQALAAYAAAD//wwAAQALAAYAAAD//w0AAQALAAYAAAD//w4AAQALAAYAAAD//w8AAQALAAYAAAD//xAAAQALAAYAAAD//xEAAQALAAYAAAD//xIAAQALAAYAAAD//xMAAQALAAYAAAD//xQAAQALAAYAAAD//xUAAQALAAYAAAAAAPv/AQALAAYAAAAAAPz/AQALAAYAAAAAAP3/AQALAAYAAAAAAP7/AQALAAYAAAAAAP//AQALAAYAAAAAAAAAAQALAAYAAAAAAAEAAQALAAYAAAAAAAIAAQALAAYAAAAAAAMAAQALAAYAAAAAAAQAAQALAAYAAAAAAAUAAQALAAYAAAAAAAYAAQALAAYAAAAAAAcAAQALAAYAAAAAAAgAAQALAAYAAAAAAAkAAQALAAYAAAAAAAoAAQALAAYAAAAAAAsAAQALAAYAAAAAAAwAAQALAAYAAAAAAA0AAQALAAYAAAAAAA4AAQALAAYAAAAAAA8AAQALAAYAAAAAABAAAQALAAYAAAAAABEAAQALAAYAAAAAABIAAQALAAYAAAAAABMAAQALAAYAAAAAABQAAQALAAYAAAAAABUAAQALAAYAAAABAPv/AQALAAYAAAABAPz/AQALAAYAAAABAP3/AQALAAYAAAABAP7/AQALAAYAAAABAP//AQALAAYAAAABAAAAAQALAAYAAAABAAEAAQALAAYAAAABAAIAAQALAAYAAAABAAMAAQALAAYAAAABAAQAAQALAAYAAAABAAUAAQALAAYAAAABAAYAAQALAAYAAAABAAcAAQALAAYAAAABAAgAAQALAAYAAAABAAkAAQALAAYAAAABAAoAAQALAAYAAAABAAsAAQALAAYAAAABAAwAAQALAAYAAAABAA0AAQALAAYAAAABAA4AAQALAAYAAAABAA8AAQALAAYAAAABABAAAQALAAYAAAABABEAAQALAAYAAAABABIAAQALAAYAAAABABMAAQALAAYAAAABABQAAQALAAYAAAABABUAAQALAAYAAAACAPv/AQALAAYAAAACAPz/AQALAAYAAAACAP3/AQALAAYAAAACAP7/AQALAAYAAAACAP//AQALAAYAAAACAAAAAQALAAYAAAACAAEAAQALAAYAAAACAAIAAQALAAYAAAACAAMAAQALAAYAAAACAAQAAQALAAYAAAACAAUAAQALAAYAAAACAAYAAQALAAYAAAACAAcAAQALAAYAAAACAAkAAQALAAYAAAACAAoAAQALAAYAAAACAAsAAQALAAYAAAACAAwAAQALAAYAAAACAA0AAQALAAYAAAACAA4AAQALAAYAAAACAA8AAQALAAYAAAACABAAAQALAAYAAAACABEAAQALAAYAAAACABIAAQALAAYAAAACABMAAQALAAYAAAACABQAAQALAAYAAAACABUAAQALAAYAAAADAPv/AQALAAYAAAADAPz/AQALAAYAAAADAP3/AQALAAYAAAADAP7/AQALAAYAAAADAP//AQALAAYAAAADAAAAAQALAAYAAAADAAEAAQALAAYAAAADAAIAAQALAAYAAAADAAMAAQALAAYAAAADAAQAAQALAAYAAAADAAUAAQALAAYAAAADAAYAAQALAAYAAAADAAcAAQALAAYAAAADAAgAAQALAAYAAAADAAkAAQALAAYAAAADAAoAAQALAAYAAAADAAsAAQALAAYAAAADAAwAAQALAAYAAAADAA0AAQALAAYAAAADAA4AAQALAAYAAAADAA8AAQALAAYAAAADABAAAQALAAYAAAADABEAAQALAAYAAAADABIAAQALAAYAAAADABMAAQALAAYAAAADABQAAQALAAYAAAADABUAAQALAAYAAAAEAPv/AQALAAYAAAAEAPz/AQALAAYAAAAEAP3/AQALAAYAAAAEAP7/AQALAAYAAAAEAP//AQALAAYAAAAEAAAAAQALAAYAAAAEAAEAAQALAAYAAAAEAAIAAQALAAYAAAAEAAMAAQALAAYAAAAEAAQAAQALAAYAAAAEAAUAAQALAAYAAAAEAAYAAQALAAYAAAAEAAcAAQALAAYAAAAEAAgAAQALAAYAAAAEAAkAAQALAAYAAAAEAAoAAQALAAYAAAAEAAsAAQALAAYAAAAEAAwAAQALAAYAAAAEAA0AAQALAAYAAAAEAA4AAQALAAYAAAAEAA8AAQALAAYAAAAEABAAAQALAAYAAAAEABEAAQALAAYAAAAEABIAAQALAAYAAAAEABMAAQALAAYAAAAEABQAAQALAAYAAAAEABUAAQALAAYAAAAFAPv/AQALAAYAAAAFAPz/AQALAAYAAAAFAP3/AQALAAYAAAAFAP7/AQALAAYAAAAFAP//AQALAAYAAAAFAAAAAQALAAYAAAAFAAEAAQALAAYAAAAFAAIAAQALAAYAAAAFAAMAAQALAAYAAAAFAAQAAQALAAYAAAAFAAUAAQALAAYAAAAFAAYAAQALAAYAAAAFAAcAAQALAAYAAAAFAAgAAQALAAYAAAAFAAkAAQALAAYAAAAFAAoAAQALAAYAAAAFAAsAAQALAAYAAAAFAAwAAQALAAYAAAAFAA0AAQALAAYAAAAFAA8AAQALAAYAAAAFABAAAQALAAYAAAAFABEAAQALAAYAAAAFABIAAQALAAYAAAAFABMAAQALAAYAAAAFABQAAQALAAYAAAAFABUAAQALAAYAAAAGAPv/AQALAAYAAAAGAPz/AQALAAYAAAAGAP3/AQALAAYAAAAGAP7/AQALAAYAAAAGAP//AQALAAYAAAAGAAAAAQALAAYAAAAGAAEAAQALAAYAAAAGAAIAAQALAAYAAAAGAAMAAQALAAYAAAAGAAQAAQALAAYAAAAGAAUAAQALAAYAAAAGAAYAAQALAAYAAAAGAAcAAQALAAYAAAAGAAgAAQALAAYAAAAGAAkAAQALAAYAAAAGAAoAAQALAAYAAAAGAAsAAQALAAYAAAAGAAwAAQALAAYAAAAGAA0AAQALAAYAAAAGAA4AAQALAAYAAAAGAA8AAQALAAYAAAAGABAAAQALAAYAAAAGABEAAQALAAYAAAAGABIAAQALAAYAAAAGABMAAQALAAYAAAAGABQAAQALAAYAAAAGABUAAQALAAYAAAAHAPv/AQALAAYAAAAHAPz/AQALAAYAAAAHAP3/AQALAAYAAAAHAP7/AQALAAYAAAAHAP//AQALAAYAAAAHAAAAAQALAAYAAAAHAAEAAQALAAYAAAAHAAIAAQALAAYAAAAHAAMAAQALAAYAAAAHAAQAAQALAAYAAAAHAAUAAQALAAYAAAAHAAYAAQALAAYAAAAHAAcAAQALAAYAAAAHAAgAAQALAAYAAAAHAAkAAQALAAYAAAAHAAoAAQALAAYAAAAHAAsAAQALAAYAAAAHAAwAAQALAAYAAAAHAA0AAQALAAYAAAAHAA4AAQALAAYAAAAHAA8AAQALAAYAAAAHABAAAQALAAYAAAAHABEAAQALAAYAAAAHABIAAQALAAYAAAAHABMAAQALAAYAAAAHABQAAQALAAYAAAAHABUAAQALAAYAAAAIAPv/AQALAAYAAAAIAPz/AQALAAYAAAAIAP3/AQALAAYAAAAIAP7/AQALAAYAAAAIAP//AQALAAYAAAAIAAAAAQALAAYAAAAIAAEAAQALAAYAAAAIAAIAAQALAAYAAAAIAAMAAQALAAYAAAAIAAQAAQALAAYAAAAIAAUAAQALAAYAAAAIAAYAAQALAAYAAAAIAAcAAQALAAYAAAAIAAgAAQALAAYAAAAIAAkAAQALAAYAAAAIAAoAAQALAAYAAAAIAAsAAQALAAYAAAAIAAwAAQALAAYAAAAIAA0AAQALAAYAAAAIAA4AAQALAAYAAAAIAA8AAQALAAYAAAAIABAAAQALAAYAAAAIABEAAQALAAYAAAAIABIAAQALAAYAAAAIABMAAQALAAYAAAAIABQAAQALAAYAAAAIABUAAQALAAYAAAAJAPv/AQALAAYAAAAJAPz/AQALAAYAAAAJAP3/AQALAAYAAAAJAP7/AQALAAYAAAAJAP//AQALAAYAAAAJAAAAAQALAAYAAAAJAAEAAQALAAYAAAAJAAIAAQALAAYAAAAJAAMAAQALAAYAAAAJAAUAAQALAAYAAAAJAAYAAQALAAYAAAAJAAcAAQALAAYAAAAJAAgAAQALAAYAAAAJAAkAAQALAAYAAAAJAAoAAQALAAYAAAAJAAsAAQALAAYAAAAJAAwAAQALAAYAAAAJAA0AAQALAAYAAAAJAA4AAQALAAYAAAAJAA8AAQALAAYAAAAJABAAAQALAAYAAAAJABEAAQALAAYAAAAJABIAAQALAAYAAAAJABMAAQALAAYAAAAJABQAAQALAAYAAAAJABUAAQALAAYAAAAKAPv/AQALAAYAAAAKAPz/AQALAAYAAAAKAP3/AQALAAYAAAAKAP7/AQALAAYAAAAKAP//AQALAAYAAAAKAAAAAQALAAYAAAAKAAEAAQALAAYAAAAKAAIAAQALAAYAAAAKAAMAAQALAAYAAAAKAAQAAQALAAYAAAAKAAYAAQALAAYAAAAKAAcAAQALAAYAAAAKAAgAAQALAAYAAAAKAAkAAQALAAYAAAAKAAoAAQALAAYAAAAKAAsAAQALAAYAAAAKAAwAAQALAAYAAAAKAA0AAQALAAYAAAAKAA4AAQALAAYAAAAKAA8AAQALAAYAAAAKABAAAQALAAYAAAAKABEAAQALAAYAAAAKABIAAQALAAYAAAAKABMAAQALAAYAAAAKABQAAQALAAYAAAAKABUAAQALAAYAAAALAPv/AQALAAYAAAALAPz/AQALAAYAAAALAP3/AQALAAYAAAALAP7/AQALAAYAAAALAP//AQALAAYAAAALAAAAAQALAAYAAAALAAEAAQALAAYAAAALAAIAAQALAAYAAAALAAMAAQALAAYAAAALAAQAAQALAAYAAAALAAUAAQALAAYAAAALAAcAAQALAAYAAAALAAgAAQALAAYAAAALAAkAAQALAAYAAAALAAoAAQALAAYAAAALAAsAAQALAAYAAAALAAwAAQALAAYAAAALAA0AAQALAAYAAAALAA4AAQALAAYAAAALAA8AAQALAAYAAAALABAAAQALAAYAAAALABEAAQALAAYAAAALABIAAQALAAYAAAALABMAAQALAAYAAAALABQAAQALAAYAAAALABUAAQALAAYAAAAMAPv/AQALAAYAAAAMAPz/AQALAAYAAAAMAP3/AQALAAYAAAAMAP7/AQALAAYAAAAMAP//AQALAAYAAAAMAAAAAQALAAYAAAAMAAEAAQALAAYAAAAMAAIAAQALAAYAAAAMAAMAAQALAAYAAAAMAAQAAQALAAYAAAAMAAUAAQALAAYAAAAMAAcAAQALAAYAAAAMAAgAAQALAAYAAAAMAAkAAQALAAYAAAAMAAoAAQALAAYAAAAMAAsAAQALAAYAAAAMAAwAAQALAAYAAAAMAA0AAQALAAYAAAAMAA4AAQALAAYAAAAMAA8AAQALAAYAAAAMABAAAQALAAYAAAAMABEAAQALAAYAAAAMABIAAQALAAYAAAAMABMAAQALAAYAAAAMABQAAQALAAYAAAAMABUAAQALAAYAAAANAPv/AQALAAYAAAANAPz/AQALAAYAAAANAP3/AQALAAYAAAANAP7/AQALAAYAAAANAP//AQALAAYAAAANAAAAAQALAAYAAAANAAEAAQALAAYAAAANAAIAAQALAAYAAAANAAMAAQALAAYAAAANAAQAAQALAAYAAAANAAUAAQALAAYAAAANAAYAAQALAAYAAAANAAgAAQALAAYAAAANAAkAAQALAAYAAAANAAoAAQALAAYAAAANAAsAAQALAAYAAAANAAwAAQALAAYAAAANAA0AAQALAAYAAAANAA4AAQALAAYAAAANAA8AAQALAAYAAAANABAAAQALAAYAAAANABEAAQALAAYAAAANABIAAQALAAYAAAANABMAAQALAAYAAAANABQAAQALAAYAAAANABUAAQALAAYAAAAOAPv/AQALAAYAAAAOAPz/AQALAAYAAAAOAP3/AQALAAYAAAAOAP7/AQALAAYAAAAOAP//AQALAAYAAAAOAAAAAQALAAYAAAAOAAEAAQALAAYAAAAOAAIAAQALAAYAAAAOAAMAAQALAAYAAAAOAAQAAQALAAYAAAAOAAUAAQALAAYAAAAOAAYAAQALAAYAAAAOAAcAAQALAAYAAAAOAAkAAQALAAYAAAAOAAoAAQALAAYAAAAOAAsAAQALAAYAAAAOAAwAAQALAAYAAAAOAA0AAQALAAYAAAAOAA4AAQALAAYAAAAOAA8AAQALAAYAAAAOABAAAQALAAYAAAAOABEAAQALAAYAAAAOABIAAQALAAYAAAAOABMAAQALAAYAAAAOABQAAQALAAYAAAAOABUAAQALAAYAAAAPAPv/AQALAAYAAAAPAPz/AQALAAYAAAAPAP3/AQALAAYAAAAPAP7/AQALAAYAAAAPAP//AQALAAYAAAAPAAAAAQALAAYAAAAPAAEAAQALAAYAAAAPAAIAAQALAAYAAAAPAAMAAQALAAYAAAAPAAQAAQALAAYAAAAPAAUAAQALAAYAAAAPAAYAAQALAAYAAAAPAAcAAQALAAYAAAAPAAgAAQALAAYAAAAPAAoAAQALAAYAAAAPAAsAAQALAAYAAAAPAAwAAQALAAYAAAAPAA0AAQALAAYAAAAPAA4AAQALAAYAAAAPAA8AAQALAAYAAAAPABAAAQALAAYAAAAPABEAAQALAAYAAAAPABIAAQALAAYAAAAPABMAAQALAAYAAAAPABQAAQALAAYAAAAPABUAAQALAAYAAAAQAPv/AQALAAYAAAAQAPz/AQALAAYAAAAQAP3/AQALAAYAAAAQAP7/AQALAAYAAAAQAP//AQALAAYAAAAQAAAAAQALAAYAAAAQAAEAAQALAAYAAAAQAAIAAQALAAYAAAAQAAMAAQALAAYAAAAQAAQAAQALAAYAAAAQAAUAAQALAAYAAAAQAAYAAQALAAYAAAAQAAcAAQALAAYAAAAQAAgAAQALAAYAAAAQAAkAAQALAAYAAAAQAAoAAQALAAYAAAAQAAsAAQALAAYAAAAQAAwAAQALAAYAAAAQAA0AAQALAAYAAAAQAA4AAQALAAYAAAAQAA8AAQALAAYAAAAQABAAAQALAAYAAAAQABEAAQALAAYAAAAQABIAAQALAAYAAAAQABMAAQALAAYAAAAQABQAAQALAAYAAAAQABUAAQALAAYAAAARAPv/AQALAAYAAAARAPz/AQALAAYAAAARAP3/AQALAAYAAAARAP7/AQALAAYAAAARAP//AQALAAYAAAARAAAAAQALAAYAAAARAAEAAQALAAYAAAARAAIAAQALAAYAAAARAAMAAQALAAYAAAARAAQAAQALAAYAAAARAAUAAQALAAYAAAARAAYAAQALAAYAAAARAAcAAQALAAYAAAARAAgAAQALAAYAAAARAAkAAQALAAYAAAARAAoAAQALAAYAAAARAAsAAQALAAYAAAARAAwAAQALAAYAAAARAA0AAQALAAYAAAARAA4AAQALAAYAAAARAA8AAQALAAYAAAARABAAAQALAAYAAAARABEAAQALAAYAAAARABIAAQALAAYAAAARABMAAQALAAYAAAARABQAAQALAAYAAAARABUAAQALAAYAAAASAPv/AQALAAYAAAASAPz/AQALAAYAAAASAP3/AQALAAYAAAASAP7/AQALAAYAAAASAP//AQALAAYAAAASAAAAAQALAAYAAAASAAEAAQALAAYAAAASAAIAAQALAAYAAAASAAMAAQALAAYAAAASAAQAAQALAAYAAAASAAUAAQALAAYAAAASAAYAAQALAAYAAAASAAcAAQALAAYAAAASAAgAAQALAAYAAAASAAkAAQALAAYAAAASAAoAAQALAAYAAAASAAsAAQALAAYAAAASAAwAAQALAAYAAAASAA0AAQALAAYAAAASAA4AAQALAAYAAAASAA8AAQALAAYAAAASABAAAQALAAYAAAASABEAAQALAAYAAAASABIAAQALAAYAAAASABMAAQALAAYAAAASABQAAQALAAYAAAASABUAAQALAAYAAAATAPv/AQALAAYAAAATAPz/AQALAAYAAAATAP3/AQALAAYAAAATAP7/AQALAAYAAAATAP//AQALAAYAAAATAAAAAQALAAYAAAATAAEAAQALAAYAAAATAAIAAQALAAYAAAATAAMAAQALAAYAAAATAAQAAQALAAYAAAATAAUAAQALAAYAAAATAAYAAQALAAYAAAATAAcAAQALAAYAAAATAAgAAQALAAYAAAATAAkAAQALAAYAAAATAAoAAQALAAYAAAATAAsAAQALAAYAAAATAAwAAQALAAYAAAATAA0AAQALAAYAAAATAA4AAQALAAYAAAATAA8AAQALAAYAAAATABAAAQALAAYAAAATABEAAQALAAYAAAATABIAAQALAAYAAAATABMAAQALAAYAAAATABQAAQALAAYAAAATABUAAQALAAYAAAAUAPv/AQALAAYAAAAUAPz/AQALAAYAAAAUAP3/AQALAAYAAAAUAP7/AQALAAYAAAAUAP//AQALAAYAAAAUAAAAAQALAAYAAAAUAAEAAQALAAYAAAAUAAIAAQALAAYAAAAUAAMAAQALAAYAAAAUAAQAAQALAAYAAAAUAAUAAQALAAYAAAAUAAYAAQALAAYAAAAUAAcAAQALAAYAAAAUAAgAAQALAAYAAAAUAAkAAQALAAYAAAAUAAoAAQALAAYAAAAUAAsAAQALAAYAAAAUAAwAAQALAAYAAAAUAA0AAQALAAYAAAAUAA4AAQALAAYAAAAUAA8AAQALAAYAAAAUABAAAQALAAYAAAAUABEAAQALAAYAAAAUABIAAQALAAYAAAAUABMAAQALAAYAAAAUABQAAQALAAYAAAAUABUAAQALAAYAAAAVAPv/AQALAAYAAAAVAPz/AQALAAYAAAAVAP3/AQALAAYAAAAVAP7/AQALAAYAAAAVAP//AQALAAYAAAAVAAAAAQALAAYAAAAVAAEAAQALAAYAAAAVAAIAAQALAAYAAAAVAAMAAQALAAYAAAAVAAQAAQALAAYAAAAVAAUAAQALAAYAAAAVAAYAAQALAAYAAAAVAAcAAQALAAYAAAAVAAgAAQALAAYAAAAVAAkAAQALAAYAAAAVAAoAAQALAAYAAAAVAAsAAQALAAYAAAAVAAwAAQALAAYAAAAVAA0AAQALAAYAAAAVAA4AAQALAAYAAAAVAA8AAQALAAYAAAAVABAAAQALAAYAAAAVABEAAQALAAYAAAAVABIAAQALAAYAAAAVABMAAQALAAYAAAAVABQAAQALAAYAAAAVABUAAQALAAYAAAAWAPv/AQALAAYAAAAWAPz/AQALAAYAAAAWAP3/AQALAAYAAAAWAP7/AQALAAYAAAAWAP//AQALAAYAAAAWAAAAAQALAAYAAAAWAAEAAQALAAYAAAAWAAIAAQALAAYAAAAWAAMAAQALAAYAAAAWAAQAAQALAAYAAAAWAAUAAQALAAYAAAAWAAYAAQALAAYAAAAWAAcAAQALAAYAAAAWAAgAAQALAAYAAAAWAAkAAQALAAYAAAAWAAoAAQALAAYAAAAWAAsAAQALAAYAAAAWAAwAAQALAAYAAAAWAA0AAQALAAYAAAAWAA4AAQALAAYAAAAWAA8AAQALAAYAAAAWABAAAQALAAYAAAAWABEAAQALAAYAAAAWABIAAQALAAYAAAAWABMAAQALAAYAAAAWABQAAQALAAYAAAAWABUAAQALAAYAAAAXAPv/AQALAAYAAAAXAPz/AQALAAYAAAAXAP3/AQALAAYAAAAXAP7/AQALAAYAAAAXAP//AQALAAYAAAAXAAAAAQALAAYAAAAXAAEAAQALAAYAAAAXAAIAAQALAAYAAAAXAAMAAQALAAYAAAAXAAQAAQALAAYAAAAXAAUAAQALAAYAAAAXAAYAAQALAAYAAAAXAAcAAQALAAYAAAAXAAgAAQALAAYAAAAXAAkAAQALAAYAAAAXAAoAAQALAAYAAAAXAAsAAQALAAYAAAAXAAwAAQALAAYAAAAXAA0AAQALAAYAAAAXAA4AAQALAAYAAAAXAA8AAQALAAYAAAAXABAAAQALAAYAAAAXABEAAQALAAYAAAAXABIAAQALAAYAAAAXABMAAQALAAYAAAAXABQAAQALAAYAAAAXABUAAQALAAYAAAAYAPv/AQALAAYAAAAYAPz/AQALAAYAAAAYAP3/AQALAAYAAAAYAP7/AQALAAYAAAAYAP//AQALAAYAAAAYAAAAAQALAAYAAAAYAAEAAQALAAYAAAAYAAIAAQALAAYAAAAYAAMAAQALAAYAAAAYAAQAAQALAAYAAAAYAAUAAQALAAYAAAAYAAYAAQALAAYAAAAYAAcAAQALAAYAAAAYAAgAAQALAAYAAAAYAAkAAQALAAYAAAAYAAoAAQALAAYAAAAYAAsAAQALAAYAAAAYAAwAAQALAAYAAAAYAA0AAQALAAYAAAAYAA4AAQALAAYAAAAYAA8AAQALAAYAAAAYABAAAQALAAYAAAAYABEAAQALAAYAAAAYABIAAQALAAYAAAAYABMAAQALAAYAAAAYABQAAQALAAYAAAAYABUAAQALAAYAAAAZAPv/AQALAAYAAAAZAPz/AQALAAYAAAAZAP3/AQALAAYAAAAZAP7/AQALAAYAAAAZAP//AQALAAYAAAAZAAAAAQALAAYAAAAZAAEAAQALAAYAAAAZAAIAAQALAAYAAAAZAAMAAQALAAYAAAAZAAQAAQALAAYAAAAZAAUAAQALAAYAAAAZAAYAAQALAAYAAAAZAAcAAQALAAYAAAAZAAgAAQALAAYAAAAZAAkAAQALAAYAAAAZAAoAAQALAAYAAAAZAAsAAQALAAYAAAAZAAwAAQALAAYAAAAZAA0AAQALAAYAAAAZAA4AAQALAAYAAAAZAA8AAQALAAYAAAAZABAAAQALAAYAAAAZABEAAQALAAYAAAAZABIAAQALAAYAAAAZABMAAQALAAYAAAAZABQAAQALAAYAAAAZABUAAQALAAYAAAAaAPv/AQALAAYAAAAaAPz/AQALAAYAAAAaAP3/AQALAAYAAAAaAP7/AQALAAYAAAAaAP//AQALAAYAAAAaAAAAAQALAAYAAAAaAAEAAQALAAYAAAAaAAIAAQALAAYAAAAaAAMAAQALAAYAAAAaAAQAAQALAAYAAAAaAAUAAQALAAYAAAAaAAYAAQALAAYAAAAaAAcAAQALAAYAAAAaAAgAAQALAAYAAAAaAAkAAQALAAYAAAAaAAoAAQALAAYAAAAaAAsAAQALAAYAAAAaAAwAAQALAAYAAAAaAA0AAQALAAYAAAAaAA4AAQALAAYAAAAaAA8AAQALAAYAAAAaABAAAQALAAYAAAAaABEAAQALAAYAAAAaABIAAQALAAYAAAAaABMAAQALAAYAAAAaABQAAQALAAYAAAAaABUAAQALAAYAAAAbAPv/AQALAAYAAAAbAPz/AQALAAYAAAAbAP3/AQALAAYAAAAbAP7/AQALAAYAAAAbAP//AQALAAYAAAAbAAAAAQALAAYAAAAbAAEAAQALAAYAAAAbAAIAAQALAAYAAAAbAAMAAQALAAYAAAAbAAQAAQALAAYAAAAbAAUAAQALAAYAAAAbAAYAAQALAAYAAAAbAAcAAQALAAYAAAAbAAgAAQALAAYAAAAbAAkAAQALAAYAAAAbAAoAAQALAAYAAAAbAAsAAQALAAYAAAAbAAwAAQALAAYAAAAbAA0AAQALAAYAAAAbAA4AAQALAAYAAAAbAA8AAQALAAYAAAAbABAAAQALAAYAAAAbABEAAQALAAYAAAAbABIAAQALAAYAAAAbABMAAQALAAYAAAAbABQAAQALAAYAAAAbABUAAQALAAYAAAAcAPv/AQALAAYAAAAcAPz/AQALAAYAAAAcAP3/AQALAAYAAAAcAP7/AQALAAYAAAAcAP//AQALAAYAAAAcAAAAAQALAAYAAAAcAAEAAQALAAYAAAAcAAIAAQALAAYAAAAcAAMAAQALAAYAAAAcAAQAAQALAAYAAAAcAAUAAQALAAYAAAAcAAYAAQALAAYAAAAcAAcAAQALAAYAAAAcAAgAAQALAAYAAAAcAAkAAQALAAYAAAAcAAoAAQALAAYAAAAcAAsAAQALAAYAAAAcAAwAAQALAAYAAAAcAA0AAQALAAYAAAAcAA4AAQALAAYAAAAcAA8AAQALAAYAAAAcABAAAQALAAYAAAAcABEAAQALAAYAAAAcABIAAQALAAYAAAAcABMAAQALAAYAAAAcABQAAQALAAYAAAAcABUAAQALAAYAAAAdAPv/AQALAAYAAAAdAPz/AQALAAYAAAAdAP3/AQALAAYAAAAdAP7/AQALAAYAAAAdAP//AQALAAYAAAAdAAAAAQALAAYAAAAdAAEAAQALAAYAAAAdAAIAAQALAAYAAAAdAAMAAQALAAYAAAAdAAQAAQALAAYAAAAdAAUAAQALAAYAAAAdAAYAAQALAAYAAAAdAAcAAQALAAYAAAAdAAgAAQALAAYAAAAdAAkAAQALAAYAAAAdAAoAAQALAAYAAAAdAAsAAQALAAYAAAAdAAwAAQALAAYAAAAdAA0AAQALAAYAAAAdAA4AAQALAAYAAAAdAA8AAQALAAYAAAAdABAAAQALAAYAAAAdABEAAQALAAYAAAAdABIAAQALAAYAAAAdABMAAQALAAYAAAAdABQAAQALAAYAAAAdABUAAQALAAYAAAAeAPv/AQALAAYAAAAeAPz/AQALAAYAAAAeAP3/AQALAAYAAAAeAP7/AQALAAYAAAAeAP//AQALAAYAAAAeAAAAAQALAAYAAAAeAAEAAQALAAYAAAAeAAIAAQALAAYAAAAeAAMAAQALAAYAAAAeAAQAAQALAAYAAAAeAAUAAQALAAYAAAAeAAYAAQALAAYAAAAeAAcAAQALAAYAAAAeAAgAAQALAAYAAAAeAAkAAQALAAYAAAAeAAoAAQALAAYAAAAeAAsAAQALAAYAAAAeAAwAAQALAAYAAAAeAA0AAQALAAYAAAAeAA4AAQALAAYAAAAeAA8AAQALAAYAAAAeABAAAQALAAYAAAAeABEAAQALAAYAAAAeABIAAQALAAYAAAAeABMAAQALAAYAAAAeABQAAQALAAYAAAAeABUAAQALAAYAAAAfAPv/AQALAAYAAAAfAPz/AQALAAYAAAAfAP3/AQALAAYAAAAfAP7/AQALAAYAAAAfAP//AQALAAYAAAAfAAAAAQALAAYAAAAfAAEAAQALAAYAAAAfAAIAAQALAAYAAAAfAAMAAQALAAYAAAAfAAQAAQALAAYAAAAfAAUAAQALAAYAAAAfAAYAAQALAAYAAAAfAAcAAQALAAYAAAAfAAgAAQALAAYAAAAfAAkAAQALAAYAAAAfAAoAAQALAAYAAAAfAAsAAQALAAYAAAAfAAwAAQALAAYAAAAfAA0AAQALAAYAAAAfAA4AAQALAAYAAAAfAA8AAQALAAYAAAAfABAAAQALAAYAAAAfABEAAQALAAYAAAAfABIAAQALAAYAAAAfABMAAQALAAYAAAAfABQAAQALAAYAAAAfABUAAQALAAYAAAAgAPv/AQALAAYAAAAgAPz/AQALAAYAAAAgAP3/AQALAAYAAAAgAP7/AQALAAYAAAAgAP//AQALAAYAAAAgAAAAAQALAAYAAAAgAAEAAQALAAYAAAAgAAIAAQALAAYAAAAgAAMAAQALAAYAAAAgAAQAAQALAAYAAAAgAAUAAQALAAYAAAAgAAYAAQALAAYAAAAgAAcAAQALAAYAAAAgAAgAAQALAAYAAAAgAAkAAQALAAYAAAAgAAoAAQALAAYAAAAgAAsAAQALAAYAAAAgAAwAAQALAAYAAAAgAA0AAQALAAYAAAAgAA4AAQALAAYAAAAgAA8AAQALAAYAAAAgABAAAQALAAYAAAAgABEAAQALAAYAAAAgABIAAQALAAYAAAAgABMAAQALAAYAAAAgABQAAQALAAYAAAAgABUAAQALAAYAAAAhAPv/AQALAAYAAAAhAPz/AQALAAYAAAAhAP3/AQALAAYAAAAhAP7/AQALAAYAAAAhAP//AQALAAYAAAAhAAAAAQALAAYAAAAhAAEAAQALAAYAAAAhAAIAAQALAAYAAAAhAAMAAQALAAYAAAAhAAQAAQALAAYAAAAhAAUAAQALAAYAAAAhAAYAAQALAAYAAAAhAAcAAQALAAYAAAAhAAgAAQALAAYAAAAhAAkAAQALAAYAAAAhAAoAAQALAAYAAAAhAAsAAQALAAYAAAAhAAwAAQALAAYAAAAhAA0AAQALAAYAAAAhAA4AAQALAAYAAAAhAA8AAQALAAYAAAAhABAAAQALAAYAAAAhABEAAQALAAYAAAAhABIAAQALAAYAAAAhABMAAQALAAYAAAAhABQAAQALAAYAAAAhABUAAQALAAYAAAACAAgAAQALAAYAAAAPAAkAAQALAAYAAAAOAAgAAQALAAYAAAANAAcAAQALAAYAAAAMAAYAAQALAAYAAAALAAYAAQALAAYAAAAKAAUAAQALAAYAAAAJAAQAAQALAAYAAAAFAA4AAQALAAYAAAA=")
tile_set = ExtResource("2_bcled")

[node name="Place" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_bcled")

[node name="SelectItem" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABABEAAgAAAAAAAQADABEAAQAGAAYAAAAFABEAAgAAAAAAAgAHABEAAQABAAMAAAAJABEAAAAAAAAAAAA=")
tile_set = ExtResource("2_bcled")

[node name="Grid Display" type="Node2D" parent="."]
position = Vector2(64, 64)
script = ExtResource("2_40ihf")
grid_size = Vector2(16, 16)
metadata/_custom_type_script = "uid://b2uydhpu634db"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -48.0
grow_horizontal = 0
grow_vertical = 0
text = "保存"

[node name="TextEdit" type="TextEdit" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -96.0
offset_right = -2.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
text_direction = 3

[node name="load" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -139.0
offset_top = -46.0
offset_right = -70.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
text = "加载"

[node name="clear" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -212.0
offset_top = -47.0
offset_right = -142.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
text = "清空 "

[node name="Play" type="Button" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -293.0
offset_top = -49.0
offset_right = -217.0
offset_bottom = -3.0
grow_horizontal = 0
grow_vertical = 0
text = "去玩耍"

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/clear" to="." method="_on_clear_pressed"]
[connection signal="pressed" from="CanvasLayer/Play" to="." method="_on_play_pressed"]
